# sqlite

./: .gitignore  .gitmodules  Makefile  db.go  embed.go  go.mod  graph.go  schema.go  validators.go  vector.go
extensions/sqlite_graph/: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  PR_SUMMARY.md  README.md  list-comprehension-plan.md  parse_tck_scenarios.py  tck_scenarios_manifest.csv  tck_scenarios_manifest.json
extensions/sqlite_graph/docs/: API_REFERENCE.md  MIGRATION_GUIDE.md  PERFORMANCE.md  PERFORMANCE_TUNING_GUIDE.md  TUTORIALS.md
extensions/sqlite_graph/examples/: README.md  cypher_demo.py  graph_database_tutorial.ipynb  python_examples.py  recommendation_system.py  simple_graph_example.py
extensions/sqlite_graph/include/: cypher-errors.h  cypher-executor.h  cypher-expressions.h  cypher-optimizer.h  cypher-parser-generated.h  cypher-paths.h  cypher-planner.h  cypher-write.h  cypher.h  graph-bulk.h  graph-internal.h  graph-performance.h  graph-util.h  graph-vtab.h  graph.h
extensions/sqlite_graph/scripts/: coverage.sh  demo_coverage_system.py  harden_memory.sh  helgrind.sh  perf_regression.sh  security_audit.sh  self_review_verification.sh  static_analysis.sh  update_compliance.py  verify_all.sh
extensions/sqlite_graph/sqlite-utils-plugin/: README.md  pyproject.toml  sqlite_utils_sqlite_graph.py
extensions/sqlite_graph/src/: Makefile  graph-advanced.c  graph-algo.c  graph-benchmark.c  graph-bulk.c  graph-cache.c  graph-compress.c  graph-destructors.c  graph-enhanced.c  graph-json.c  graph-memory.c  graph-memory.h  graph-tvf.c  (+8 more)
(+28 files in other folders)
