[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-utils-sqlite-graph"
version = "0.1.0"
description = "SQLite graph database extension plugin for sqlite-utils"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "SQLite Graph Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlite-utils>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/sqlite-graph"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/sqlite-graph/issues"

[project.entry-points.sqlite_utils]
graph = "sqlite_utils_sqlite_graph"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlite_utils_sqlite_graph*"]
